crates/eventric-domain/tests/ui/event_duplicate_identifier.rs
use eventric_domain::event::Event;

#[derive(Event)]
#[event(identifier: foo, identifier: bar)]
struct Foo;

fn main() {}
